--- a/Tienda.html
+++ b/Tienda.html
@@ -93,7 +93,7 @@
             <div class='container'>
                 <div class='row'>
                     <div class='col-sm-3'>
-                        <div class="card" style="width: 18rem;">
+                        <div class="card" style="width: auto;">
                             <img class="card-img-top" src="Imagenes/Coldwar.webp" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Call of Duty Black Ops Cold War</h5>
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                     <div class='col-sm-3'>
-                        <div class="card" style="width: 18rem;">
+                        <div class="card" style="width: auto;">
                             <img class="card-img-top" src="Imagenes/Battlefield.jpeg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Battlefield 2042 (2021)</h5>
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                     <div class='col-sm-3'>
-                        <div class="card" style="width: 18rem;">
+                        <div class="card" style="width: auto;">
                             <img class="card-img-top" src="Imagenes/God.webp" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">God of war</h5>
@@ -137,7 +137,7 @@
                         </div>
                     </div>
                     <div class='col-sm-3'>
-                        <div class="card" style="width: 18rem;">
+                        <div class="card" style="width: auto;">
                             <img class="card-img-top" src="Imagenes/Fif.jpeg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Fifa 22</h5>
